Added much more theory

--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -50,3 +50,5 @@
 \providecommand{\gcd}{\operatorname{mcd}}
 \providecommand{\Eq}{\operatorname{Eq}}
 \providecommand{\res}{\operatorname{res}}
+\providecommand{\normaleq}{\trianglelefteq}
+\providecommand{\disc}{\operatorname{disc}}
