--- a/src/01-Cossos.Rmd
+++ b/src/01-Cossos.Rmd
@@ -79,7 +79,8 @@ i infinita si no.
 Sigui $f(x)\in F[x]$ un polinomi. Aleshores existeix una extensió $K/F$ tal que $K$ té una arrel de $f(x)$.
 :::
 ::: {.proof}
-TODO
+Considerem $K = F[x] / (g(x))$, on $g(x)$ és un factor irreductible qualsevol de $f(x)$. Sigui $\alpha$ la classe de $x$ a $K$. Aleshores $g(\alpha)=0$
+i per tant $f(\alpha)=0$.
 :::
 
 El següent teorema ens diu que l'extensió donada pel teorema anterior té grau igual al grau del polinomi (per això s'ha triat
@@ -87,10 +88,15 @@ el nom!) quan aquest és irreductible. De fet, ens dona una base de $K$ com a $F
 
 ::: {.theorem #ext-arrel-base}
 Sigui $f(x)\in F[x]$ un polinomi irreductible de grau $n$, i sigui $K=F[x]/(f(x))$. Sigui $\alpha$ la classe de $x$ a $K$.
-Aleshores els elements $(1,\alpha,\ldots,\alpha^{n-1})$ formen una $F$-base de $K$.
+Aleshores els elements $\{1,\alpha,\ldots,\alpha^{n-1}\}$ formen una $F$-base de $K$.
 :::
 ::: {.proof}
-TODO
+Tot element de $K$ té un representant de la forma $h(x)\in F[x]$. Dividint per $f(x)$, podem trobar un
+representant equivalent però de grau $< n$. Per tant, els elements $\{1,\alpha,\ldots,\alpha^{n-1}\}$
+generen $K$ com a $F$-espai vectorial. Cal veure que són linealment independents. Si hi hagués una
+relació de dependència lineal, voldria dir que hi hauria un polinomi $g(x)\in F[x]$ de grau $< n$
+tal que $g(\alpha)=0$. Però aleshores $g(x)$ hauria de ser un divisor de $f(x)$, que és impossible
+ja que $f(x)$ és irreductible.
 :::
 
 L'aritmètica a $F[x]/(p(x))$ és molt explícita: els seus elements es poden expressar com a polinomis en $\alpha$ de grau
@@ -124,12 +130,18 @@ conjunt finit format per $\alpha_1,\ldots,\alpha_n$ aleshores escriurem $F(\alph
 un *element primitiu* de l'extensió (que no és únic, en general!).
 
 ::: {.theorem #ext-simple name="extensió simple"}
-Sigui $f(x)\in F[x]$ un polinomi irreductible, i suposem que $K/F$ és una extensió que conté una arrel $\alpha$ de $f(x)$.
+Sigui $f(x)\in F[x]$ un polinomi irreductible, i suposem que $K/F$ és una extensió
+que conté una arrel $\alpha$ de $f(x)$.
 Aleshores hi ha un isomorfisme $$F[x]/(f(x))\cong F(\alpha).$$
 Aquest isomorfisme és únic si demanem que $[x]\mapsto \alpha$.
 :::
 ::: {.proof}
-TODO
+Tenim
+\begin{align*}
+\Hom_F(F[x]/(f(x)), F(\alpha)) &\cong \{ \varphi \in \Hom_{F}(F[x], F(\alpha)) ~|~ \varphi(f) = 0\}\\
+& \cong \{\beta\in F(\alpha) ~|~ f(\beta)=0\}\neq\emptyset.
+\end{align*}
+Donat un morfisme $\varphi$, és automàticament un isomorfisme, fet que comprovem calculant graus de les extensions.
 :::
 
 ::: {.example}
@@ -163,7 +175,7 @@ $$
 :::
 ::: {.proof}
 $$
-\Hom_\sigma (F(\alpha), L) \cong \Hom_{\sigma}(F[x]/(f(x)), L) \cong \{ \sigma \in \Hom_{\sigma}(F[x],L) ~|~ \sigma(f) = 0\},
+\Hom_\sigma (F(\alpha), L) \cong \Hom_{\sigma}(F[x]/(f(x)), L) \cong \{ \varphi \in \Hom_{\sigma}(F[x],L) ~|~ \varphi(f) = 0\},
 $$
 i aquest últim conjunt és precisament $\{\beta \in L ~|~ \sigma(f)(\beta) = 0\}$.
 :::
