Fixed small typos

--- a/src/10-ElementPrimitiu.Rmd
+++ b/src/10-ElementPrimitiu.Rmd
@@ -33,7 +33,7 @@ nombre finit de subcossos de $K$ i, un altre cop pel criteri anterior, l'extensi
 
 Podem generalitzar una mica aquest teorema:
 
-::: {.theorem name=""}
+::: {.theorem}
 Suposem que $K=F(\alpha,\beta)$ i $\beta$ és separable sobre $F$.
 Aleshores existeix $\gamma\in K$ tal que $K=F(\gamma)$.
 :::
@@ -114,7 +114,7 @@ per tant la igualtat no és certa si cap de les extensions inicials és de Galoi
 
 Estudiem ara el cas on les dues extensions inicials són de Galois.
 
-::: {.proposition name=""}
+::: {.proposition}
 Siguin $K_1/F$ i $K_2/F$ dues extensions de Galois amb grups $G_1$ i $G_2$.
 Aleshores $K_1K_2/F$ i $K_1\cap K_2 /F$ són Galois, i la restricció a $K_1$ i a $K_2$
 indueix un isomorfisme
@@ -151,10 +151,12 @@ i la fórmula de la proposició anterior ens demostra $|H| = |\operatorname{Im}(
 :::
 
 Podem demostrar un cert recíproc:
+
 ::: {.proposition}
 Suposem que $K/F$ és una extensió de Galois, i $G=\Gal(K/F) = G_1\times G_2$. Aleshores $K$ és el
 compositum de dues extensions de Galois $K_1/F$ i $K_2/F$ amb $K_1\cap K_2=F$ i grups de Galois $G_1$ i $G_2$, respectivament.
 :::
+
 ::: {.proof}
 Definim $K_1=K^{G_1}$ i $K_2=K^{G_2}$. Aleshores $K_1\cap K_2$ correspon a $\langle G_1,G_2\rangle=G$, per tant
 $K_1\cap K_2=F$. El compositum correspon amb $G_1\cap G_2=1$, i per tant $K_1K_2=K$.
@@ -165,6 +167,7 @@ Sigui $K/F$ una extensió finita separable. Aleshores hi ha una extensió $E/K/F
 i és mínima en el sentit que si $E'/K$ és una extensió amb $E'/F$ Galois, tenim $E \subseteq E'$. Aquesta
 extensió s'anomena la *clausura de Galois* de $K/F$.
 :::
+
 ::: {.proof}
 Ja sabem que hi ha extensions de $K$ que són Galois (prenem el cos de descomposició dels polinomis mínims
 d'un conjunt de generadors de $K$). El cos $E$ buscat és llavors la intersecció de totes les extensions $E'/K$ tals
